<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="20dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:clickable="true"
            android:id="@+id/layout_my">
        <ImageView
                android:layout_width="wrap_content"
                android:id="@+id/myhead"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:src="@mipmap/ic_launcher"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:id="@+id/name"
                android:text="@string/name"
                android:textSize="40sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/my_order"
        android:orientation="vertical">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/btn1"
            android:layout_marginBottom="0.2dp"
            android:paddingLeft="20dp"
            android:background="#FFFFFF"
            android:gravity="left"
            android:paddingTop="12dp"
            android:text="@string/my_order"
            android:textSize="25sp"
    />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/btn_seller_ord"
                android:layout_marginBottom="0.2dp"
                android:paddingLeft="20dp"
                android:background="#FFFFFF"
                android:gravity="left"
                android:paddingTop="12dp"
                android:text="@string/my_order_seller"
                android:textSize="25sp"
        />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/btn2"
            android:layout_marginBottom="0.1dp"
            android:paddingLeft="20dp"
            android:background="#FFFFFF"
            android:gravity="left"
            android:paddingTop="12dp"
            android:text="@string/my_want"
            android:textSize="25sp"
    />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/btn3"
                android:layout_marginBottom="0.1dp"
                android:paddingLeft="20dp"
                android:background="#FFFFFF"
                android:gravity="left"
                android:paddingTop="12dp"
                android:text="@string/my_goods"
                android:textSize="25sp"
        />
</LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

        <Button
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="退出登录"
                android:id="@+id/my_cancel_btn"
                android:background="#e52525"
                android:layout_marginBottom="10dp"
        />

    </LinearLayout>

</LinearLayout>